[gd_scene load_steps=6 format=3 uid="uid://bq8x7k3m2n4p9"]

[ext_resource type="Script" path="res://ui/game_over.gd" id="1"]
[ext_resource type="Theme" uid="uid://ckax6htygmelo" path="res://menu/theme/theme.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://ej6lqf2fptv8" path="res://menu/button.png" id="3"]
[ext_resource type="Texture2D" uid="uid://blcjvv0p0a6v8" path="res://menu/button_pressed.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cfh73c8wnvgol" path="res://menu/button_hover.png" id="5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 0.8)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="GameOverPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -200.0
offset_right = 192.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="TextureButton" parent="GameOverPanel"]
layout_mode = 2
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
texture_hover = ExtResource("5")

[node name="Label" type="Label" parent="GameOverPanel/RestartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Respawn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="TextureButton" parent="GameOverPanel"]
layout_mode = 2
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
texture_hover = ExtResource("5")

[node name="Label" type="Label" parent="GameOverPanel/MainMenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

